# hints

./: Cargo.toml  README.md  release-plz.toml  run_benchmarks.sh
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: criterion.rs
examples/: measure_simple.rs  save_committee.rs  transcode_committee.rs
src/: kzg.rs  lib.rs  main.rs  original_code.rs  original_proof_system.rs  proof_system.rs  test.rs  trusted_setup.rs  types.rs  utils.rs
src/data/: trusted_setup_64.json
src/snark/: hints.rs  mod.rs  prover.rs  verifier.rs
src/tests/: harness.rs  mod.rs
tests/: edge_cases.rs  integration.rs  negative_tests.rs  polynomial_tests.rs  test_helpers.rs
tests/bolero_fuzz/: hints_fuzz.rs  lib.rs  subset_tests.rs
tests/bolero_fuzz/components/: property_tests.rs
tests/bolero_fuzz/exhaustive/: combinatorial.rs  subset_tests.rs
tests/bolero_fuzz/models/: signature_mutator.rs
