[package]
name = "hints"
version = "0.0.1"
authors = [ "hints authors", "ember arlynx <ember@hellas.ai>" ]
description = "A library for computing weighted threshold signatures"
keywords = ["cryptography", "finite-fields", "elliptic-curves", "pairing"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

################################# Dependencies ################################

[dependencies]
criterion = { version = "0.5.1", features = [ "html_reports" ] }
ark-std = { version = "0.5.0" }
ark-ec = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
ark-poly = { version = "0.5.0" }
ark-bls12-381 = { version = "0.5.0" }
ark-serialize = { version = "0.5.0" }
paste = { version = "1.0" }
crossbeam = { version = "0.8.2" }

[features]
asm = [ "ark-ff/asm" ]
parallel = [ "ark-std/parallel", "ark-ff/parallel",  "ark-ec/parallel", ]

[profile.dev]
opt-level = 3
