[package]
name = "hints"
version = "0.0.3"
authors = [ "hints authors", "ember arlynx <ember@hellas.ai>" ]
description = "A library for computing weighted threshold signatures"
keywords = ["cryptography", "finite-fields", "elliptic-curves", "pairing"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

[profile.test]
opt-level = 2
debug-assertions = true

################################# Dependencies ################################

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
hex = "0.4"

ark-std = { version = "0.5.0", features = ["print-trace"] }
ark-ec = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
ark-poly = { version = "0.5.0" }
ark-poly-commit = { version = "0.5.0" }
ark-crypto-primitives = { version = "0.5.0" }
ark-bls12-381 = { version = "0.5.0" }
ark-serialize = { version = "0.5.0" }
paste = { version = "1.0" }
crossbeam = { version = "0.8.4" }
rayon = { version = "1.10.0" , optional = true }
#ark-blst = { version = "0.1.0" }

[dev-dependencies]
rayon = "1"
proptest = "1.6.0" 
criterion = { version = "0.5.1", features = [ "html_reports" ] }


[features]
default = [ "parallel" , "asm" ]
asm = [ "ark-ff/asm" ]
parallel = [ "ark-std/parallel", "ark-ff/parallel",  "ark-ec/parallel", "dep:rayon" ]
