[package]
name = "hints"
version = "0.0.5"
authors = [ "hints authors", "ember arlynx <ember@hellas.ai>" ]
description = "A library for computing weighted threshold signatures"
keywords = ["cryptography", "finite-fields", "elliptic-curves", "pairing"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2021"

[profile.test]
opt-level = 2
debug-assertions = true

################################# Dependencies ################################

[dependencies]
lockstitch = "0.29"
serde = { version = "1", features = [ "derive", "rc" ] }
serde_json = "1"
serde_with = "3.12"
hex = "0.4"

ark-std = { version = "0.5.0", features = ["print-trace"] }
ark-ec = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
ark-poly = { version = "0.5.0" }
ark-poly-commit = { version = "0.5.0" }
ark-crypto-primitives = { version = "0.5.0" }
ark-bls12-381 = { version = "0.5.0" }
ark-serialize = { version = "0.5.0", features = ["serde_with"] }
rayon = { version = "1.10.0" , optional = true }
#ark-blst = { version = "0.1.0" }

[dev-dependencies]
rayon = "1"
criterion = { version = "0.5.1", features = [ "html_reports" ] }
once_cell = "1.21.0"

[features]
default = [ "parallel" , "asm" ]
asm = [ "ark-ff/asm" ]
parallel = [ "ark-std/parallel", "ark-ff/parallel",  "ark-ec/parallel", "dep:rayon" ]

[[bench]]
name = "criterion"
harness = false

[[example]]
name = "save_committee"
path = "examples/save_committee.rs"

[[example]]
name = "measure_simple"
path = "examples/measure_simple.rs"
